<resources>
    <string name="app_name">江大宝典</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="button_main">首页</string>
    <string name="button_library">图书馆</string>
    <string name="button_fragment_logout">退出登陆</string>

    <string name="textview_logout_prompt">\t现在你可以上传自己收藏的列表,再也不怕数据丢失了~~</string>
    <string name="textview_disclaimer_content">本APP自身不发布任何招聘等相关信息。所有宣讲会、招聘会信息均从学校官方网站收集，整理，
        提供给大家作为参考，请以实际信息为准。\n\n
        任何修改本APP(修改变更，反编译等)所发布的文件与作者无关\n\n
        本APP不建议、不参与用户任何行为，若用户因自身原因，造成任何意外或利益上的损失，作者不负任何法律责任。\n\n

    </string>
    <string name="textview_disclaimer_title">1、免责声明</string>
    <string name="textview_disclaimer_open_thank_title">2、感谢开源</string>
    <string name="textview_comment_not_data">当前没有评论</string>
    <string name="textview_user_center_school">学校</string>
    <string name="textview_user_center_nick_name">昵称</string>
    <string name="textview_user_center_target_company">想去的公司</string>
    <string name="textview_user_center_target_work">应聘的职位</string>
    <string name="edit_comment_input">\t请输入你的评论</string>
    <string name="edit_comment_to_login">你还没登陆，点击登陆</string>

    <string name="library_collect_title">图书收藏</string>
    <string name="collect_title">收藏栏</string>
    <string name="gameTitle">课间小游戏</string>
    <string name="upgrade_prompt_title">更新啦！</string>
    <string name="error_try_again">失败，请重试</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="has_not_upgrade_information">没有更新信息</string>
    <string name="check_upgrade_ing">正在检查更新</string>
    <string name="be_last_version">已经是最新的哦~</string>
    <string name="download_ing">正在下载中</string>
    <string name="download">下载</string>
    <string name="has_downloaded">已经下载</string>
    <string name="downloaded">下载完成!</string>
    <string name="about_title">关于</string>
    <string name="current_version">当前版本</string>
    <string name="about">\n author@weiwangqiang 版权所有 \nCopyright @2017-03-27 \n weiwangqiang.All Right Reserved  </string>
    <string name="download_without_wifi">确定在非WiFi环境下载？</string>
    <string name="add_success">添加成功</string>
    <string name="unKnowLocation">未知地点</string>
    <string name="collect">收藏</string>
    <string name="cancel_collect">取消收藏</string>

    <string name="title_feed_back">反馈意见</string>
    <string name="title_xuanjiang_province">宣讲省份</string>
    <string name="title_xuangjiang_tab">宣讲会</string>

    <string name="title_job_fair_province">招聘会</string>
    <string name="title_job_fair_tab">招聘会</string>
    <string name="title_collect">收藏夹</string>
    <string name="title_library">图书馆</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_fragment_logout">个人中心</string>
    <string name="title_fragment_login">登陆</string>
    <string name="title_browse_message">信息详情</string>
    <string name="title_browse_calender">校历</string>
    <string name="title_browse_push">推送详情</string>
    <string name="title_share_soft">将软件分享给</string>
    <string name="title_share_message">将信息分享给</string>
    <string name="title_share_game">将游戏分享给</string>
    <string name="title_comment">评论区</string>
    <string name="title_disclaimer">免责声明</string>
    <string name="title_choice_school">选择学校</string>
    <string name="title_choice_province">选择省份</string>
    <string name="title_choice_company">填写目标公司</string>
    <string name="title_choice_company_hit">填写目标公司</string>
    <string name="title_choice_work">填写工作</string>
    <string name="title_user_message">个人信息</string>


    <string name="toast_feedback_contact_information_warn">联系方式不能为空</string>
    <string name="toast_feedback_content_warn">内容不能为空</string>
    <string name="toast_feedback_contact_information_error">请输入电话或邮箱</string>
    <string name="toast_user_password_error">密码错误</string>
    <string name="toast_register_failure">注册失败，请稍后再试</string>
    <string name="toast_register_success">注册成功</string>
    <string name="toast_submit_success">提交成功</string>
    <string name="toast_submit_failure">提交失败</string>
    <string name="toast_delete_collect">取消收藏</string>
    <string name="toast_add_collect">收藏成功</string>
    <string name="toast_syn_data_download_failure">下载数据失败</string>
    <string name="toast_syn_data_download_success">下载数据成功</string>
    <string name="toast_syn_data_not_data_to_push">没有数据可以提交了</string>
    <string name="toast_library_input_warn">请输入搜索词</string>
    <string name="toast_library_content_not_more">没有更多了</string>
    <string name="toast_library_can_not_search_book">没有你要搜索的书</string>
    <string name="toast_network_error">网络不在服务区哦~</string>
    <string name="toast_data_null">没有数据</string>
    <string name="toast_jump_wait">正在跳转</string>
    <string name="toast_share_success">分享成功</string>
    <string name="toast_share_cancel">分享成功</string>
    <string name="toast_permission_error">无法获取权限</string>
    <string name="toast_login_error">还没有登陆哦~</string>
    <string name="toast_edit_text_empty">内容不能为空</string>

    <string name="menu_syn_data_push">上传</string>
    <string name="menu_syn_data_download">下载</string>

    <string name="recycler_statues_pull_to_load_more">上拉加载更多</string>
    <string name="recycler_statues_loading">正在加载</string>
    <string name="recycler_statues_not_any_more">没有更多了</string>
    <string name="recycler_statues_network_error">网络出错，请连接后再试</string>

    <string name="notify_download_finish">下载完成</string>
    <!-- Strings related to login -->
    <string name="title_login">登陆</string>
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆或注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">请输入不少于4位的字符</string>
    <string name="error_invalid_long_email">字符过长</string>
    <string name="error_invalid_password">请输入6位数以上密码</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">请输入用户名~</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="share_toast">正在跳转</string>
    <string name="share_app_description">我正在江大宝典看宣讲会</string>
</resources>
