<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="juhe.jiangdajiuye.view.activity.Disclaimer">
    <android.support.v7.widget.Toolbar
        android:id="@+id/disclaimer_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/baseColor"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:titleTextColor="@color/white" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textColor="@color/black_transparency_900"
            android:text="@string/textview_disclaimer_title"/>
        <TextView
            android:id="@+id/disclaimer_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:text="@string/textview_disclaimer_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textColor="@color/black_transparency_900"
            android:text="@string/textview_disclaimer_open_thank_title"/>
        <TextView
            android:id="@+id/disclaimer_open_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:text=""/>
    </LinearLayout>
</ScrollView>
</LinearLayout>
